--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,17 @@
 spring.application.name=FloginBackend
 server.port=8080
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:flogindb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# JPA/Hibernate Properties
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Enable H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
