--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "lucide-react": "^0.548.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.5",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -39,13 +39,21 @@
       "last 1 safari version"
     ]
   },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  },
   "jest": {
     "transformIgnorePatterns": [
-      "node_modules/(?!(axios)/)"
+      "node_modules/(?!(react-router-dom)/)"
     ]
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "babel-jest": "^30.2.0",
+    "jest-fetch-mock": "^3.0.3",
+    "msw": "^2.12.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.7"
   }
